# agenda

./: .gitignore  README.md  interface_generator.py  next.config.mjs  package-lock.json  package.json  session_generator.py
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
app/: layout.tsx  page.tsx
app/components/: Announcement.tsx  Collapse.tsx  FeedbackModal.tsx  FilterBar.tsx  Nav.tsx  SessionCard.tsx  SessionCardRenderer.tsx  SessionList.tsx  SingleSessionPage.tsx  SpecialSessionCard.tsx  StatusIndicator.tsx
app/dashboard/: page.tsx
app/data/: sessions.ts
app/session/: layout.tsx
app/session/[id]/: page.tsx
app/session/favorites/: page.tsx
app/types/: session.ts
app/utils/: colors.ts  favorite.ts  time.ts  transition-utils.ts
favorite-counter/: README.md  pyproject.toml  samconfig.toml  template.yaml
favorite-counter/counter/: app.py  requirements.txt
favorite-counter/events/: event.json
